# bggcli

./: .envrc  .gitignore  Cargo.toml  README.md  fun_queries.md
migrations/: 20250127192616_init.sql
src/: boardgame.rs  collection.rs  db.rs  geeklist.rs  main.rs
