[package]
name = "bggc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
http-cache-reqwest = "0.15.0"
quick-xml = { version = "0.37.2", features = ["serialize", "overlapped-lists"] }
reqwest = "0.12.12"
reqwest-middleware = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
xdg = "2.5.2"
